# water-sim-cuda

./: CMakeLists.txt  ObjLoader.cpp  ObjLoader.h  README.md  Simulation.cpp  Simulation.h  VoxelEngine.cpp  VoxelEngine.h  VoxelPipeline.cpp  VoxelPipeline.h  common.cuh  config.cu  config.txt  engine.cpp  engine.cu  engine.h  game_configdata.cpp  game_configdata.h  kernels.cu  kernels.h  main.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  vcpkg.json
.github/workflows/: build.yml
sdf_creator/: creator.py
shaders/: dot.frag  dot.vert  screen.frag  screen.vert  ssf_blur.frag  ssf_depth.frag  ssf_depth.vert
